[package]
name = "bevnet"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for networking in Bevy."
authors = ["Tipragot <contact@tipragot.fr>"]
keywords = ["bevy", "network", "game"]
categories = ["network-programming", "game-development"]
repository = "https://git.tipragot.fr/tipragot/bevnet"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
nursery = "warn"

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
bincode = "1.3.3"
bevy = "0.10.1"

[features]
default = ["client", "server", "sync"]
server = []
client = []
sync = []
