[package]
name = "border-warsv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevnet = {path = "../bevnet"}
bevy = "0.10.1"
bincode = "1.3.3"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
